Updates from ShareLaTeX

--- a/Ling.tex
+++ b/Ling.tex
@@ -1,4 +1,5 @@
 \section{Ling Αθροιστές}
+\label{section:Ling}
 Στα προηγούμενα κεφάλαια παρουσιάστηκαν διάφοροι δυαδικοί αθροιστές , 
 ανάμεσα σε αυτούς και ο αθροιστής πρόβλεψης κρατουμένου. Επειτα γνωστοποιήθηκαν 
 διάφοροι τρόποι υπολογισμού των κρατουμένων για την υλοποίηση του CLA. Όπως, λοιπον,
@@ -35,11 +36,11 @@
     H_{i:j} = g_i + G_{i-1:j}
 \end{equation}
 Επιπλέον για την ανάκτηση του σήματος $G$, δηλαδή του κρατούμενου που παράγει ένα σύνολο, 
-που είναι και ο αρχικός σκοπός των CLA αθροιστών γίνεται με την παρακάτω συνάρτηση :
+που είναι και ο αρχικός σκοπός των CLA αθροιστών, γίνεται με την παρακάτω συνάρτηση :
 \begin{equation}
     G_{i:j} = p_i * H_{i:j}
 \end{equation}
-Σημαντικό, επίσης, αυτής της παραγοντοποίησης αυτής είναι πως υποστηρίζεται ο τελεστής $\circledast$
+Σημαντικό, επίσης, της παραγοντοποίησης αυτής είναι πως υποστηρίζεται ο τελεστής $\circledast$
 και η αναγωγή της σε πρόβλημα προθέματος. Έχοντας το σύνολο $i$ εως $j$ με $i>k>j$ αποδεικνύεται πως
 \begin{equation}
 \begin{split}
@@ -90,11 +91,11 @@
 Ένας αθροιστής Ling βελτιστοποιεί την επίδοση του CLA μειώνοντας κατά ένα το πλήθος 
 εισόδων των λογικών πυλών (fan-in). Όμως αφαιρώντας από κάθε όρο του Group Generate 
 σήματος ενα propagate έχει ως αποτέλεσμα να αυξάνεται η πολυπλοκότητα του τελευταίου 
-σταδίου όπου υπολογίζεται το άθροισμα (εξίσωση [\ref{eq:ling_sum_1}]). 
+σταδίου όπου υπολογίζεται το άθροισμα. 
 Παρατηρείται στην εξίσωση \ref{eq:ling_sum_1} πως πρέπει να υπολογιστεί το $H$ 
 στην συνέχεια να πραγματοποιηθεί η λογική του πράξη AND με το σήμα $p_i$ και τέλος
 η έξοδος της πύλης AND να οδηγήσει την είσοδο της πύλης XOR σε συνδυασμό με το
-σήμα $x_i$ ( Εικόνα \ref{fig:Ling_sum_1} ).
+σήμα $x_i$, όπως φαίνεται στην εικόνα \ref{fig:Ling_sum_1}.
 
 \begin{figure}[H]
     \centering
@@ -118,7 +119,7 @@
 % \\\\
 % \textcolor{red}{[Figure with logic diagram of whats described above}
 % \\\\
-Η εξίσωση \ref{eq:ling_sum_1} αυτή μπορεί να εκφραστεί με μεγαλύτερη πολυπλοκότητα 
+Η εξίσωση \ref{eq:ling_sum_1} μπορεί να εκφραστεί με μεγαλύτερη πολυπλοκότητα 
 αλλά ταυτόχρονα μειώνοντας τον συνολικό χρόνο υπολογισμού του αθροίσματος.
 \begin{equation}
 \label{eq:ling_sum_2}
@@ -128,18 +129,17 @@
 % \\\\
 % \textcolor{red}{[Figure with logic diagram of whats described above}
 % \\\\
-Στην εναλλακτική τροποποίηση που εκφράζεται στην εξίσωση \ref{eq:ling_sum_2} και 
-απεικονίζεται στην εικόνα \ref{fig:Ling_sum_2} με πρώτη ματιά φαίνεται να είναι 
+Στην τροποποίηση που εκφράζεται στην εξίσωση \ref{eq:ling_sum_2} και 
+απεικονίζεται στην εικόνα \ref{fig:Ling_sum_2} με μία πρώτη ματιά φαίνεται να 
 υπάρχει αρνητική απόδοση σε σχέση με την αρχική και πιο απλή υλοποίηση.
 Στην πραγματικότητα όμως η απόδοση αφορά την καθυστέρησή και όχι το εμβαδόν. Το σήμα
 $Η$ είναι αυτό που υπολογίζεται τελευταίο χρονικά και στην πρώτη αρχιτεκτονική
-είναι στο κρίσιμο μονοπάτι\footnote{Κρίσιμο μονοπάτι (critical path) Το μονοπάτι με αρχί την είσοδο και τέλος την έξοδο του κυκλώματος που έχει την μεγαλύτερη καθυστέρηση}. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
+είναι στο κρίσιμο μονοπάτι. Αντίθετα στην δεύτερη υλοποίηση η λογική πύλη XOR 
 έχει τελική τιμή στην έξοδο της πριν οριστικοποιηθεί η τιμή του σήματος H, παράλληλα 
 με τον υπολογισμό της. 
 
 %------------------------------------------------
- Παρατηρούμε πως η μέθοδος του Ling μειώνει την πολυπλοκότητα μόνο στο πρώτο επίπεδο 
- του αθροιστή.
+ Παρατηρείται, λοιπόν,  πως η μέθοδος του Ling μειώνει την πολυπλοκότητα μόνο στο πρώτο επίπεδο του αθροιστή, ενώ η αύξηση πολυπλοκότητας του τελευταίου επιπέδου δεν επιβαρύνει τον σχεδιασμό χρονικά σύμφωνα με την παραπάνω τροποποίηση.
  
  
  
@@ -149,9 +149,9 @@ $Η$ είναι αυτό που υπολογίζεται τελευταίο χρ
  
  
 \subsection{Αραίωση σε Ling Αρχιτεκτονικές}
-Οι τεχνικές αραίωσης που παρουσιάστηκαν στην παράγραφο \ref{subsection:prefix_sparseness},
+Οι τεχνικές αραίωσης που παρουσιάστηκαν στην παράγραφο \ref{subsection:prefix_sparseness}
  είναι δυνατό να εφαρμοστούν και στην περίπτωση της παραγοντοποίησης κατά
- Ling \cite{1377160}.
+ Ling \cite{1377160}.\\\\   
 Sparsness-2
 \begin{equation*}
     \begin{split}
