--- a/PrefixAdders.tex
+++ b/PrefixAdders.tex
@@ -256,14 +256,12 @@ Kogge-Stone είναι ιδανική αφορά το μικρό fan-out. Στη
 \begin{figure}[H]
     \centering
     %\includegraphics[width=\textwidth]{Brent_Kung_Prefix.png}
-    \includegraphics[height=6cm,width=9cm]{Pictures/}
-    \caption{}
-    \label{}
+    \includegraphics[height=7cm,width=9cm]{Pictures/prefix_sparse_2.png}
+    \caption{Προθεματικός αθροιστής με τεχνική αραίωσης}
+    \label{fig:prefix_sparse_2}
 \end{figure}
 
-Στην εικόνα \ref{} παρουσιάζεται το διάγραμμα ενός αθροιστή οκτώ δυαδικών ψηφίων με την εφαρμογή της τεχνικής αραίωσης sparse-2, δηλαδή υπολογίζοντε τα μισά κρατουμενα (ανα δύο), στην δομή Kogge-Stone.
-Στις εξισώσεις που ακολουθούν περιγράφεται η διάδοση των κρατουμένων στο τελευταίο επίπεδο για τεχνική αραίωσης sparse-2 και sparse-4.
-
+Στην εικόνα \ref{fig:prefix_sparse_2} παρουσιάζεται το διάγραμμα ενός αθροιστή οκτώ δυαδικών ψηφίων με την εφαρμογή της τεχνικής αραίωσης sparse-2, δηλαδή υπολογίζονται τα μισά κρατούμενα (ανά δύο), στην δομή Kogge-Stone. Στις εξισώσεις που ακολουθούν περιγράφεται η διάδοση των κρατουμένων στο τελευταίο επίπεδο για τεχνική αραίωσης sparse-2 και sparse-4.\\\\
 Sparsness-2
 \begin{equation*}
     \begin{split}
