--- a/modAdder.tex
+++ b/modAdder.tex
@@ -1,15 +1,13 @@
 \section{Αθροιστής υπολοίπου $2^n-1$}
+\label{section:mod_addition}
 Η αριθμητική υπολοίπου αφορά το υπόλοιπο ενός αριθμού X διαιρεμένου με έναν Y, εναλλακτικά
 αφαιρείτε από το Χ το Y μέχρι $X < Y$. Την πράξη αυτή την συμβολίζουμε ως 
 \begin{equation*}
     X\ mod\ Y
 \end{equation*}
-Αριθμητικές υπολοίπου έχουν εφαρμογές σε ένα μεγάλο πλήθος εφαρμογών εφόσον αποτελούν και 
+Αριθμητικές υπολοίπου είναι χρήσιμες σε ένα μεγάλο πλήθος εφαρμογών εφόσον αποτελούν και 
 την βάση για τα Residue Number Systems (RNS). Επίσης αποτελούν μέρος της ψηφιακής
-επεξεργασίας σημάτων και ψηφιακών φίλτρων , κρυπτογραφίας , σε τεχνικές ανίχνευσης και διόρθωσης σφάλματος καθώς και σε υψηλών ταχυτήτων δίκτυα. Η δυαδική άθροιση είναι σε 
-αριθμητική υπολοίπου και γράφεται $(A+B)\ mod\ n$ όπου n είναι το πλήθος των δυαδικών 
-ψηφίων των A και B. 
-Στην παρούσα ενότητα θα μελετηθούν οι αθροιστές υπολοίπου $2^n-1$ όπου η επιτάχυνση τους είναι ο σκοπός μας.
+επεξεργασίας σημάτων και ψηφιακών φίλτρων, κρυπτογραφίας, σε τεχνικές ανίχνευσης και διόρθωσης σφάλματος καθώς και σε υψηλών ταχυτήτων δίκτυα. Η δυαδική άθροιση εκφράζεται μέσω αριθμητική υπολοίπου ως $(A+B)\ mod\ n$, όπου n είναι το πλήθος των δυαδικών ψηφίων των A και B. Στην παρούσα ενότητα θα μελετηθούν οι αθροιστές υπολοίπου $2^n-1$ όπου η επιτάχυνση τους είναι ο σκοπός του παρόν έργου.
 
 
 
@@ -55,31 +53,31 @@
 
 Υπάρχουν διάφοροι τρόποι για να υπολογιστεί στο υλικό το αποτέλεσμα 
 ενός αθροιστή υπολοίπου $2^n-1$.
-Η πιο απλή ιδέα είναι αποτελείται από δύο αθροιστές όπου ο πρώτος δεν έχει
-κρατούμενο εισόδου , παίρνει ως είσοδο τα Α και Β και η έξοδος του τροφοδοτεί
+Η πιο απλή ιδέα αποτελείται από δύο αθροιστές όπου ο πρώτος δεν έχει
+κρατούμενο εισόδου, παίρνει ως είσοδο τα Α και Β και η έξοδος του τροφοδοτεί
 την είσοδο του δεύτερου αθροιστή με δεύτερο όρισμα τον μηδενικό αριθμό
 και κρατούμενο εισόδου το κρατούμενο εξόδου του πρώτου αθροιστή. Το άθροισμα 
 του δεύτερου αθροιστή είναι και το ζητούμενο. Στην εικόνα \ref{fig:2^n-1_simple_adder}
 αποτυπώνεται η απλή αρχιτεκτονική που περιγράφηκε.
 \begin{figure}[H]
-\centering
-\includegraphics[height=4cm,width=9cm]{Simple_2^n-1_adder.png}
-\caption{Απλή δομή αθροιστή υπολοίπου $2^n-1$}
-\label{fig:2^n-1_simple_adder}
+    \centering
+    \includegraphics[height=4cm,width=9cm]{Simple_2^n-1_adder.png}
+    \caption{Απλή δομή αθροιστή υπολοίπου $2^n-1$}
+    \label{fig:2^n-1_simple_adder}
 \end{figure}
 Η παραπάνω τεχνική έχει πολύ μεγάλη χρονική καθυστέρηση διότι υπάρχουν δύο 
 επίπεδα αθροιστών. Για να μειωθεί ο χρόνος που απαιτείται για να οδηγηθεί η έξοδος
-με το σωστό αποτέλεσμα μπορούμε να εκτελέσουμε παράλληλα δυο προσθέσεις του Α και Β
-με τον ένα αθροιστή να έχει κρατούμενο εισόδου και τον άλλο να μην έχει. Τα αποτελέσματα 
+με το σωστό αποτέλεσμα είναι δυνατή η παράλληλη εκτέλεση δυο προθέσεων του Α και Β
+με τον ένα αθροιστή να έχει κρατούμενο εισόδου και τον άλλο χωρίς. Τα αποτελέσματα 
 των δύο αθροιστών θα οδηγούνται σε έναν πολυπλέκτη με είσοδο επιλογής το κρατούμενο 
-εισόδου του αθροιστή χωρίς κρατούμενο εισόδου. Αν η είσοδος επιλογής είναι ενεργή 
+εξόδου του αθροιστή χωρίς κρατούμενο εισόδου. Αν η είσοδος επιλογής είναι ενεργή 
 τότε θα επιλέγεται η έξοδος του αθροιστή με κρατούμενο εισόδου όπως φαίνεται στην 
  εικόνα \ref{fig:2^n-1_carry_select_adder}.
 \begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{Carry_select_2^n-1.png}
-\caption{Αρχιτεκτονική αθροιστή επιλογής κρατουμένου $2^n-1$}
-\label{fig:2^n-1_carry_select_adder}
+    \centering
+    \includegraphics[width=\textwidth]{Carry_select_2^n-1.png}
+    \caption{Αρχιτεκτονική αθροιστή επιλογής κρατουμένου $2^n-1$}
+    \label{fig:2^n-1_carry_select_adder}
 \end{figure}
 Πρέπει να σημειωθεί πως και στις δύο περιπτώσεις απαιτείται η υλοποίηση δύο αθροιστών 
 με αποτέλεσμα αυξάνεται το εμβαδόν του αθροιστή στο διπλάσιο συγκριτικά με έναν απλό αθροιστή.
@@ -102,8 +100,7 @@
 \end{equation}
 Με αυτήν την μικρή διαμόρφωση αντιμετωπίζεται επίσης και η διπλή αναπαράσταση του μηδέν.
 Η μόνη περίπτωση που προκύπτει η δεύτερη αναπαράσταση του μηδέν ($1...11$) πετυχαίνεται
-όταν οι αριθμοί εισόδου είναι συμπληρωματικοί. Με την παραπάνω τροποποίηση όμως στην
-στην περίπτωση αυτή το σήμα $P_{n-1:0}$ ενεργοποιείται και οδηγεί το κρατούμενο εισόδου, 
+όταν οι αριθμοί εισόδου είναι συμπληρωματικοί. Με την παραπάνω τροποποίηση όμως στην περίπτωση αυτή το σήμα $P_{n-1:0}$ ενεργοποιείται και οδηγεί το κρατούμενο εισόδου, 
 με προφανές τελικό αποτέλεσμα το μηδέν στην κανονική αναπαράστασή του.
 
 Στην συνέχεια της εργασίας αυτής οι αθροιστές υπολοίπου που θα παρουσιαστούν ή θα 
@@ -134,11 +131,11 @@
 % G_{} = τα κρατούμενα του πρώτου επιπέδου 
 % G_{}^' = τα κρατούμενα του δεύτερου επιπέδου
 % -----------------------------------------------
-Στην περίπτωση ενός αθροιστή που αποτελείται από δύο στάδια, το πρώτο χωρίς κρατούμενο εισόδου
+Εξετάζεται η περίπτωση ενός αθροιστή που αποτελείται από δύο στάδια, το πρώτο χωρίς κρατούμενο εισόδου
 και το δεύτερο στάδιο έχει κρατούμενο εισόδου το κρατούμενο εξόδου του πρώτου. Οπότε στο
 πρώτο στάδιο $c_{-1} = 0$. Από την εξίσωση \ref{eq:G'P'_From_GP} συμπεραίνετε πως 
 $(G'_{n-1},P'_{n-1}) = (G_{n-1},P_{n-1})$. Στο δεύτερο επίπεδο ισχύει 
-$c_{-1} = G'_{n-1} = G_{n-1} $ εφόσον στο πρώτο στάδιο δεν το κρατούμενο εισόδου είναι μηδέν.
+$c_{-1} = G'_{n-1} = G_{n-1} $ εφόσον στο πρώτο στάδιο το κρατούμενο εισόδου είναι μηδέν.
 Για $c_{-1} = G_{n-1}$ η εξίσωση \ref{eq:G'P'_From_GP} παίρνει την μορφή 
 \begin{equation*}
 \begin{split}
@@ -158,11 +155,12 @@ $c'_{n-1} = G'_{n-1}$
 \end{equation}
 
 \begin{figure}[H]
-\centering
-\includegraphics[width=height=6cm,width=9cm]{2^n-1_simple_Prefix_structure.png}
-\caption{Απλή δομή προθεματικού αθροιστή υπολοίπου $2^8-1$}
-\label{fig:2^n-1_simple_Prefix_structure}
+    \centering
+    \includegraphics[width=height=6cm,width=9cm]{2^n-1_simple_Prefix_structure.png}
+    \caption{Απλή δομή προθεματικού αθροιστή υπολοίπου $2^8-1$}
+    \label{fig:2^n-1_simple_Prefix_structure}
 \end{figure}
+Στην εικόνα \ref{fig:2^n-1_simple_Prefix_structure} παρουσιάζεται η βασική δομή των αθροιστών υπολοίπου υλοποιημένη με προθεματικό αθροιστή σύμφωνα με τις εξισώσεις που αναπτύχθηκαν.
 Ένας σχεδιασμός σαν τον παραπάνω, εκτός από το γεγονός του επιπλέον επιπέδου,
 έχει και το μειονέκτημα στο ότι το κρατούμενο εξόδου του πρώτου τμήματος οδηγεί 
 n κόμβους του τελευταίου επιπέδου, όπως εκφράζεται και την εξίσωση \ref{eq:2^n-1_G'_eguation}.
@@ -183,7 +181,7 @@ n κόμβους του τελευταίου επιπέδου, όπως εκφρ
 
 
 
-\subsection{Architectures Improvements}
+\subsection{Αρχιτεκτονική βελτιστοποίηση}
 
 Χρησιμοποιώντας τον ειδικό τελεστή που παρουσιάστηκε στο κεφάλαιο 4 $"\circledast"$
 ο αθροιστής υπολοίπου $2^n-1$ μπορεί να υλοποιηθεί με ένα ακόμα παράλληλο τμήμα 
@@ -194,11 +192,10 @@ n κόμβους του τελευταίου επιπέδου, όπως εκφρ
 % G_{}^* = τα κρατούμενα της νέας αρχιτεκτονικής
 % -----------------------------------------------
 Όπως εξηγήθηκε προηγουμένως το κρατούμενο εισόδου, στο δεύτερο επίπεδο, του αθροιστή υπολοίπου n
-δυαδικών ψηφίων είναι ίσο με το κρατούμενο εξόδου  του, στο πρώτο επίπεδο που είναι 
+δυαδικών ψηφίων είναι ίσο με το κρατούμενο εξόδου του στο πρώτο επίπεδο, που είναι 
 χωρίς κρατούμενο εισόδου, $c_{-1} = G_{n-1}$, άρα ισχύει και 
 $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα κρατούμενα που υπολογίζονται 
-στο δεύτερο επίπεδο.
-
+στο δεύτερο επίπεδο.\\\\
 % Proof
 % -----------------------------------------------
 Με επαγωγικό τρόπο θα αποδειχθεί πως
@@ -213,24 +210,24 @@ $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα
 \end{equation}
 Απόδειξη :
 \begin{enumerate}
-    \item Για $i=-1$ ισχύει $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$. Όπως προαναφέρθηκε προηγουμένως,$c_{-1} = G_{n-1}$ , $c^*_{-1} = G^*_{-1}$. Άρα $c^*_{-1} = G^*_{-1}$.
+    \item Για $i=-1$ ισχύει $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$. Όπως προαναφέρθηκε προηγουμένως, $c_{-1} = G_{n-1}$ , $c^*_{-1} = G^*_{-1}$. Άρα $c^*_{-1} = G^*_{-1}$.
     \item Αρχική υπόθεση πως η εξίσωση \ref{eq:(G*,P*)} ισχύει και για $i=k-1$ με $k \geq 0$.
     Άρα ισχύει και $c^*_{k-1} = G^*_{k-1}$. Θα αποδειχθεί πως ισχύει και για $i=k$. Ξεκινώντας 
-    με τον ορισμό και έχοντας την παραπάνω υπόθεση καταλήγουμε 
+    με τον ορισμό και έχοντας την παραπάνω υπόθεση αποδεικνύεται 
     \begin{equation*}
     \begin{split}
         (G^*_k,P^*_k) &= (g_k,p_k) \circledast (G^*_{k-1},P^*_{k-1})\\
         &= (g_k,p_k) \circledast (c^*_{k-1},P^*_{k-1})\\
         &= (g_k + p_k c^*_{k-1} , p_k P^*_{k-1})\\
-        &= (c'_{k},P_k)
+        &= (c^*_{k},P_k)
     \end{split}
     \end{equation*}
-    με τις παραπάνω ισότητες πως ισχύει $c^*_i = G^*_i$ για $-1 \leq i \leq n-2$.
+    Σύμφωνα με τις παραπάνω ισότητες, ισχύει $c^*_i = G^*_i$ για $-1 \leq i \leq n-2$.
 \end{enumerate}
 
 Πριν την παρουσίαση της νέας δομής, η οποία έχει ένα λιγότερο επίπεδο από την δομή 
 που περιγράφηκε παραπάνω, πρέπει να γίνει μία απόδειξη ενός ισχυρισμού που θα χρειαστεί στην 
-συνέχεια.Ο ισχυρισμός αυτός είναι
+συνέχεια. Ο ισχυρισμός αυτός είναι
 \begin{equation}
 \label{eq:GgG=Gg}
     (G_i,P_i)\circledast(g,p)\circledast(G_i,P_i) = (G_i,P_i)\circledast(g,p)
@@ -262,16 +259,16 @@ $(G^*_{-1},P^*_{-1}) = (G_{n-1},P_{n-1})$, συμβολίζοντας $G^*$ τα
     \end{split}
 \end{equation}
 Στην τελευταία ισότητα της παραπάνω διαδικασίας εφαρμόζεται ο ισχυρισμός της εξίσωσης \ref{eq:GgG=Gg}
-Η σχέση αυτή ( εξίσωση \ref{eq:(G*,P*)_new} ) είναι και η αρχιτεκτονική βελτίωση των αθροιστών υπολοίπου
+Η σχέση της εξίσωσης \ref{eq:(G*,P*)_new} είναι και η αρχιτεκτονική βελτίωση των αθροιστών υπολοίπου
 $2^n-1$.
 
 Σε αυτό το σημείο είναι αναγκαίο να δηλωθεί μια αναπαράσταση με σκοπό την ευκολία στην
 έκφραση συναρτήσεων και όρων. Το σήμα $G_{i}$ αντιπροσωπεύει το $G_{i:0}$, δηλαδή
 έχει κάθε ζευγάρι $(g_k,p_k)$, με $ i \geq k \geq 0 $, με τον τελεστή $\circledast$.
 Είναι δυνατό, όπως έχει προαναφερθεί, να έχουμε τον όρο $G_{i:j}$, με $ i \geq j$ με
-την περίπτωση της ισότητας τότε το $G_{i:i} = g_i$. Θα οριστεί μια νέα έκφραση, η οποία 
+την περίπτωση της ισότητας τότε το $G_{i:i} = g_i$ και $G_{i:0}=c_i$. Θα οριστεί μια νέα έκφραση, η οποία 
 προβλέπει την περίπτωση του $i < j$ στην έκφραση $G_{i:j}$. Στην περίπτωση, λοιπόν, που το
-$i < j$, τότε ορίζουμε :
+$i < j$, τότε προβλέπεται :
 % \begin{equation*}
 %     (G_{i:j},P_{i:j} = (G_i,P_i) \circledast (G_{n-1:j},P_{n-1:j})
 % \end{equation*}
@@ -284,7 +281,7 @@ $i < j$, τότε ορίζουμε :
         (G_{i:0},P_{i:0}) \circledast (G_{n-1:j},P_{n-1:j}) ,& i < j
     \end{cases}
 \end{equation}
-Έχοντας ορίσει την παραπάνω έκφραση, είναι αποδεκτή και μια εναλλακτική διατύπωση των σημάτων $(G^*_i,P^*_i)$
+όπου n είναι το μέγεθος του αθροιστή. Έχοντας ορίσει την παραπάνω έκφραση, είναι αποδεκτή και μια εναλλακτική διατύπωση των σημάτων $(G^*_i,P^*_i)$
 \begin{equation}
     (G^*_i,P^*_i) = (G_{i:i+1},P_{i:i+1})
 \end{equation}
@@ -292,25 +289,18 @@ $i < j$, τότε ορίζουμε :
 Για παράδειγμα σε ένα αθροιστή των οκτώ δυαδικών ψηφίων $n=8$, για τον υπολογισμό του 
 $G_{1:6}$ υπονοείται η παρακάτω έκφραση :
 \begin{equation*}
-    G_{1:7} = g_1 + p_1g_0 + p_1p_0g_7 + p_1p_0p_7g_6
+    G_{1:6} = g_1 + p_1g_0 + p_1p_0g_7 + p_1p_0p_7g_6
 \end{equation*}
-Είναι σημαντικό να ξεκαθαριστεί πως αυτός ο τρόπος διατύπωσης είναι χρήσιμος στην περιγραφή μόνο
-αθροιστών υπολοίπου $2^n-1$. Στις περιπτώσεις άλλων αθροιστών καθίσταται απαγορευμένη έκφραση.Για παράδειγμα
-στους αθροιστές ακεραίων με κρατούμενο εισόδου το προηγούμενο ζεύγος του $(g_0,p_0)$ δεν είναι το 
-$(g_{n-1},p_{n-1})$ αλλά, όπως έχει προαναφερθεί και στα προηγούμενα κεφάλαια. το $c_{-1}$
-
-Στην παρακάτω εικόνα εφαρμόζεται η διαδικασία αυτή για το $G_{4:5} = G^*_{4:5}$. Είναι εμφανές
-πως το προηγούμενο στοιχείο του μηδέν είναι το $n-1$, δηλαδή το επτά στην περίπτωση του $2^8-1$
-αθροιστή υπολοίπου. 
+Είναι σημαντικό να ξεκαθαριστεί πως αυτός ο τρόπος διατύπωσης είναι χρήσιμος στην περιγραφή μόνο αθροιστών υπολοίπου $2^n-1$. Στις περιπτώσεις άλλων αθροιστών καθίσταται απαγορευμένη έκφραση. Στην παρακάτω εικόνα εφαρμόζεται η διαδικασία αυτή για το $G_{4:5} = G^*_{4}$. Είναι εμφανές πως το προηγούμενο στοιχείο του μηδέν είναι το $n-1$, δηλαδή το επτά στην περίπτωση του $2^8-1$ αθροιστή υπολοίπου των 8-bits. 
 \begin{figure}[H]
-\centering
-\includegraphics[scale=0.6]{Round_numbers.png}
-% \caption{}
-% \label{}
+    \centering
+    \includegraphics[scale=0.6]{Round_numbers.png}
+    % \caption{}
+    % \label{}
 \end{figure}
 
 
-Στην εικόνα \ref{fig:2^8-1_new_structure} παρουσιάζεται η αρχιτεκτονική ενός 8-bit αθροιστή υπολοίπου $2^n-1$ με σκοπό την αστικοποίηση της παραπάνω κυκλικής έκφρασης. Συγκρίνοντας αυτή την τοπολογία με αυτή της εικόνας \ref{fig:2^n-1_simple_Prefix_structure}, είναι εμφανές η διαφορά του επιπλέον επιπέδου.
+Στην εικόνα \ref{fig:2^8-1_new_structure} παρουσιάζεται η αρχιτεκτονική ενός 8-bit αθροιστή υπολοίπου $2^n-1$ με σκοπό την οπτικοποίηση της παραπάνω κυκλικής έκφρασης. Συγκρίνοντας αυτή την τοπολογία με αυτή της εικόνας \ref{fig:2^n-1_simple_Prefix_structure}, είναι εμφανές η διαφορά του επιπλέον επιπέδου.
 \begin{figure}[H]
 \centering
 % \includegraphics[width=\textwidth]{2^8-1_new_structure.png}
