--- a/references.bib
+++ b/references.bib
@@ -284,3 +284,33 @@ keywords={CMOS logic circuits;adders;logic design;CMOS;Ling-carry formulation;de
 doi={10.1109/ICECS.2005.4633502}, 
 ISSN={}, 
 month={Dec},}
+
+
+
+
+@Article{electronics6040078,
+AUTHOR = {Darmi, Mohammed and Cherif, Lekbir and Benallal, Jalal and Elgouri, Rachid and Hmina, Nabil},
+TITLE = {Integrated Circuit Conception: A Wire Optimization Technic Reducing Interconnection Delay in Advanced Technology Nodes},
+JOURNAL = {Electronics},
+VOLUME = {6},
+YEAR = {2017},
+NUMBER = {4},
+URL = {http://www.mdpi.com/2079-9292/6/4/78},
+ISSN = {2079-9292},
+DOI = {10.3390/electronics6040078}
+}
+
+
+
+@ARTICLE{1051729, 
+author={K. C. Saraswat and F. Mohammadi}, 
+journal={IEEE Journal of Solid-State Circuits}, 
+title={Effect of Scaling of Interconnections on the Time Delay of VLSI Circuits}, 
+year={1982}, 
+volume={17}, 
+number={2}, 
+pages={275-280}, 
+keywords={Integrated circuit technology;Large scale integration;Metallisation;Monolithic integrated circuits;Conductivity;Delay effects;Dielectric materials;Etching;Inorganic materials;Integrated circuit interconnections;Materials science and technology;Silicides;Silicon;Very large scale integration}, 
+doi={10.1109/JSSC.1982.1051729}, 
+ISSN={0018-9200}, 
+month={Apr},}
