--- a/Results.tex
+++ b/Results.tex
@@ -81,6 +81,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 \clearpage
 \subsection{Μετρήσεις}
+Στην παράγραφο αυτή καταγράφονται τα αποτελέσματα των, τοπογραφικών και μη, μετρήσεων των αθροιστών σε μορφή πινάκων. Σημειώνεται πως για τις μετρήσεις δεν δόθηκε κανένας περιορισμός στο εργαλείο σύνθεσης. Οι μονάδες μέτρησης καθυστέρησης, εμβαδού και κατανάλωση ενέργειας είναι $ns$, $nm^2$ και $pw$ αντίστοιχα.
 \begin{multicols}{2}
 [\subsubsection{Μη-Τοπογραφικές Μετρήσεις}]
 %------------------------------------------------------------------------------
@@ -336,6 +337,79 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 
 
+% \begin{multicols}{2}
+% [\subsubsection{Τοπογραφικές Μετρήσεις}]
+
+% \begin{table}[H]
+% \centering
+%      \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+%         \hline
+%          & Delay & Area & Power \\ [0.5ex]
+%         \hline\hline
+%         Prefix  & 0.393  & 150.7    & 38 \\ 
+%         \hline
+%         Ling    & 0.433  & 152.5    & 39 \\
+%         \hline
+%         Jackson & 0.427  & 156      & 37 \\
+%         \hline
+%     \end{tabular}
+% \caption{Τοπογραφικές Μετρήσεις 8-bit}
+% \label{topo_result_table_8}
+% \end{table}
+% %------------------------------------------------------------------------------
+% \begin{table}[H]
+% \centering
+%      \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+%         \hline
+%          & Delay & Area & Power \\ [0.5ex] 
+%         \hline\hline
+%         Prefix  & 0.589  & 384    & 97 \\ 
+%         \hline
+%         Ling    & 0.597  & 397    & 103 \\
+%         \hline
+%         Jackson & 0.542  & 449    & 120 \\
+%         \hline
+%     \end{tabular}
+% \caption{Τοπογραφικές Μετρήσεις 16-bit}
+% \label{topo_result_table_16}
+% \end{table}
+% %------------------------------------------------------------------------------
+% \begin{table}[H]
+% \centering
+%      \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+%         \hline
+%          & Delay & Area & Power \\ [0.5ex]
+%         \hline\hline
+%         Prefix  & 0.667  & 949.8    & 252.9 \\ 
+%         \hline
+%         Ling    & 0.747  & 917.2    & 245 \\
+%         \hline
+%         Jackson & 0.652  & 1109    & 299.6 \\
+%         \hline
+%     \end{tabular}
+% \caption{Τοπογραφικές Μετρήσεις 32-bit}
+% \label{topo_result_table_32}
+% \end{table}
+% %------------------------------------------------------------------------------
+% \begin{table}[H]
+% \centering
+%      \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+%         \hline
+%          & Delay & Area & Power \\ [0.5ex] 
+%         \hline\hline
+%         Prefix  & 0.726  & 2725    & 736 \\ 
+%         \hline
+%         Ling    & 0.824  & 2349    & 625 \\
+%         \hline
+%         Jackson & 0.863  & 2161    & 550 \\
+%         \hline
+%     \end{tabular}
+% \caption{Τοπογραφικές Μετρήσεις 64-bit}
+% \label{topo_result_table_64}
+% \end{table}
+% %------------------------------------------------------------------------------
+% \end{multicols}
+
 \begin{multicols}{2}
 [\subsubsection{Τοπογραφικές Μετρήσεις}]
 
@@ -345,11 +419,11 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
          & Delay & Area & Power \\ [0.5ex]
         \hline\hline
-        Prefix  & 0.393  & 150.7    & 38 \\ 
+        Prefix & 0.289 & 166 & 43.56 \\
         \hline
-        Ling    & 0.433  & 152.5    & 39 \\
+        Ling & 0.313 & 178 & 48.60 \\
         \hline
-        Jackson & 0.427  & 156      & 37 \\
+        Jackson & 0.335 & 215 & 61.85 \\
         \hline
     \end{tabular}
 \caption{Τοπογραφικές Μετρήσεις 8-bit}
@@ -362,11 +436,11 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
          & Delay & Area & Power \\ [0.5ex] 
         \hline\hline
-        Prefix  & 0.589  & 384    & 97 \\ 
+        Prefix & 0.384 & 398 & 102.85 \\
         \hline
-        Ling    & 0.597  & 397    & 103 \\
+        Ling & 0.404 & 422 & 117.99 \\
         \hline
-        Jackson & 0.542  & 449    & 120 \\
+        Jackson & 0.397 & 455 & 133.82 \\
         \hline
     \end{tabular}
 \caption{Τοπογραφικές Μετρήσεις 16-bit}
@@ -379,11 +453,11 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
          & Delay & Area & Power \\ [0.5ex]
         \hline\hline
-        Prefix  & 0.667  & 949.8    & 252.9 \\ 
+        Prefix & 0.439 & 943 & 239.80 \\
         \hline
-        Ling    & 0.747  & 917.2    & 245 \\
+        Ling & 0.462 & 992 & 261.15 \\
         \hline
-        Jackson & 0.652  & 1109    & 299.6 \\
+        Jackson & 0.467 & 1268 & 357.11 \\
         \hline
     \end{tabular}
 \caption{Τοπογραφικές Μετρήσεις 32-bit}
@@ -396,11 +470,11 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
         \hline
          & Delay & Area & Power \\ [0.5ex] 
         \hline\hline
-        Prefix  & 0.726  & 2725    & 736 \\ 
+        Prefix & 0.548 & 2147 & 522.28 \\
         \hline
-        Ling    & 0.824  & 2349    & 625 \\
+        Ling & 0.583 & 2244 & 587.19 \\
         \hline
-        Jackson & 0.863  & 2161    & 550 \\
+        Jackson & 0.581 & 2960 & 821.75 \\
         \hline
     \end{tabular}
 \caption{Τοπογραφικές Μετρήσεις 64-bit}
@@ -413,6 +487,162 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 
 
+
+
+
+\clearpage
+\begin{multicols}{2}
+[\subsubsection{Τοπογραφικές Μετρήσεις sparse-2}]
+
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex]
+        \hline\hline
+        Prefix & 0.330 & 134 & 35.12 \\
+        \hline
+        Ling & 0.335 & 143 & 38.74 \\
+        \hline
+        Jackson & 0.343 & 161 & 44.82 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-2 Μετρήσεις 8-bit}
+\label{topo_sparse2_result_table_8}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix & 0.423 & 300 & 78.92 \\
+        \hline
+        Ling & 0.421 & 319 & 89.23 \\
+        \hline
+        Jackson & 0.426 & 355 & 102.14 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-2 Μετρήσεις 16-bit}
+\label{topo_sparse2_result_table_16}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex]
+        \hline\hline
+        Prefix & 0.476 & 675 & 172.43 \\
+        \hline
+        Ling & 0.486 & 711 & 189.33 \\
+        \hline
+        Jackson & 0.465 & 849 & 232.75 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-2 Μετρήσεις 32-bit}
+\label{topo_sparse2_result_table_32}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix & 0.571 & 1480 & 368.42 \\
+        \hline
+        Ling & 0.567 & 1553 & 407.71 \\
+        \hline
+        Jackson & 0.559 & 1911 & 516.89 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-2 Μετρήσεις 64-bit}
+\label{topo sparse2_result_table_64}
+\end{table}
+%------------------------------------------------------------------------------
+\end{multicols}
+
+
+
+
+
+
+
+
+\begin{multicols}{2}
+[\subsubsection{Τοπογραφικές Μετρήσεις sparse-4}]
+
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex]
+        \hline\hline
+        Prefix & 0.429 & 127 & 33.38 \\
+        \hline
+        Ling & 0.419 & 130 & 34.49 \\
+        \hline
+        Jackson & 0.427 & 150 & 42.43 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-4 Μετρήσεις 8-bit}
+\label{topo_sparse4_result_table_8}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix & 0.499 & 252 & 66.87 \\
+        \hline
+        Ling & 0.501 & 261 & 71.30 \\
+        \hline
+        Jackson & 0.505 & 279 & 77.04 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-4 Μετρήσεις 16-bit}
+\label{topo_sparse4_result_table_16}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex]
+        \hline\hline
+        Prefix & 0.560 & 577 & 151.20 \\
+        \hline
+        Ling & 0.558 & 591 & 157.13 \\
+        \hline
+        Jackson & 0.550 & 660 & 180.03 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-4 Μετρήσεις 32-bit}
+\label{topo_sparse4_result_table_32}
+\end{table}
+%------------------------------------------------------------------------------
+\begin{table}[H]
+\centering
+     \begin{tabular}{||p{1.2cm} | p{0.7cm} p{1cm} p{1cm} ||} 
+        \hline
+         & Delay & Area & Power \\ [0.5ex] 
+        \hline\hline
+        Prefix & 0.649 & 1146 & 297.58 \\
+        \hline
+        Ling & 0.642 & 1183 & 313.25 \\
+        \hline
+        Jackson & 0.641 & 1476 & 392.74 \\
+        \hline
+    \end{tabular}
+\caption{Τοπογραφικές sparse-4 Μετρήσεις 64-bit}
+\label{topo sparse4_result_table_64}
+\end{table}
+%------------------------------------------------------------------------------
+\end{multicols}
 
 
 
@@ -686,12 +916,12 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 
 
-
+\clearpage
 \subsection{Ανάλυση αποτελεσμάτων}
 Τα αποτελέσματα των μετρήσεων, όπως ήταν και αναμενόμενο, διαφέρουν ανάλογα με τον τρόπο μεταγλώττισης (τοπογραφικό και μη). Στην συνέχεια σχολιάζονται και οι δύο περιπτώσεις όσο αφορά την απόδοση. 
 
 \subsubsection{Σχολιασμός μη-τοπογραφικών αποτελεσμάτων}
-Σύμφωνα με τα αποτελέσματα των μη-τοπογραφικών μετρήσεων, παρατηρείται θετική απόδοση της ταχύτητας σε όλες τις περιπτώσεις. Η αναμενόμενη κατάταξή, όσο αφορά την ταχύτητα, ξεκινά με μεγαλύτερη καθυστέρηση στις απλές τοπολογίες προθεματικών αθροιστών υπολοίπου, και καταλήγει στις τοπολογίες κατά Jackson. Σε παρελθοντικές έρευνες \cite{1377160} και \cite{4633502} έχει αποδειχθεί πως η αθροιστές υπολοίπου $2^n-1$ ling είναι πιο αποδοτικοί από τους simple-prefix. Στα αποτελέσματα όπως φαίνεται και στο γράφημα της εικόνας \ref{graph:non-topo} υπάρχουν περιπτώσεις όπου οι Ling αθροιστές είναι στην χειρότερη περίπτωση.
+Σύμφωνα με τα αποτελέσματα των μη-τοπογραφικών μετρήσεων, παρατηρείται θετική απόδοση της ταχύτητας σε όλες τις περιπτώσεις. Η αναμενόμενη κατάταξή, όσο αφορά την ταχύτητα, ξεκινά με μεγαλύτερη καθυστέρηση στις απλές τοπολογίες προθεματικών αθροιστών υπολοίπου, και καταλήγει στις τοπολογίες κατά Jackson. Σε παρελθοντικές έρευνες \cite{1377160} και \cite{4633502} έχει αποδειχθεί πως οι αθροιστές υπολοίπου $2^n-1$ κατά ling είναι πιο αποδοτικοί από τους simple-prefix. Στα αποτελέσματα, όπως φαίνεται και στο γράφημα της εικόνας \ref{graph:non-topo}, υπάρχουν περιπτώσεις όπου οι Ling αθροιστές είναι στην χειρότερη περίπτωση.
 
 \begin{figure}[H]
 \begin{center}
@@ -748,7 +978,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 \label{graph:non-topo}
 \end{figure}
 
-Αυτό δεν σημαίνει πως οι μετρήσεις είναι άκυρες. Ο βασικός λόγος που προκαλεί την διαφορά αυτή είναι η επιλογή της βιβλιοθήκης. Οι μετρήσεις της παρούσας εργασίας πάρθηκαν σε τεχνολογία \textcolor{red}{32 ? 28 nm}, ενώ οι μετρήσεις που παρουσιάζονται σε προηγούμενες δημοσιεύσεις συγκρίνοντας τους προθεματικούς αθροιστές με αθροιστές Ling βασίζονται σε τεχνολογίες μεγαλύτερες των 100nm. 
+Αυτό δεν σημαίνει πως οι μετρήσεις είναι άκυρες. Ο βασικός λόγος που προκαλεί την διαφορά αυτή είναι η επιλογή της βιβλιοθήκης. Οι μετρήσεις της παρούσας εργασίας πραγματοποιήθηκαν σε τεχνολογία 32nm, ενώ οι μετρήσεις που παρουσιάζονται σε προηγούμενες δημοσιεύσεις συγκρίνοντας τους προθεματικούς αθροιστές με αθροιστές Ling βασίζονται σε τεχνολογίες μεγαλύτερες των 100nm. 
 
 Όσο αφορά την επιτάχυνση των αθροιστών, όπου είναι και ο στόχος της παρούσας εργασίας, είναι εμφανές και από το διάγραμμα αλλά και από τους πίνακες των αποτελεσμάτων πως υπάρχει αισθητό προβάδισμα. Πρέπει όμως να σημειωθεί πως όσο αφορά την απαίτηση πόρων και ενέργειας τα αποτελέσματα είναι αρνητικά, κάτι που είναι επίσης αναμενόμενο εφόσον για την υλοποίηση της παραγοντοποίησης Jackson είναι αναγκαίο να εισαχθούν στο σχεδιασμό επιπλέον κόμβοι για τον υπολογισμό των σημάτων D.
 
@@ -869,11 +1099,65 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 
 \subsubsection{Σχολιασμός τοπογραφικών αποτελεσμάτων}
+Στην περίπτωση των τοπογραφικών μετρήσεων τα αποτελέσματα είναι αρνητικά κατά μέσο όρο με ελάχιστες εξαιρέσεις. Συγκεκριμένα στις sparse-2 και sparse-4 τεχνικές αραίωσης, στους αθροιστές των 32 και 64 δυαδικών ψηφίων παρατηρείται θετική απόδοση όσο αφορά την καθυστέρηση. Στις υπόλοιπες περιπτώσεις τα αποτελέσματα είναι αρνητικά και σε μερικές μη αναμενόμενα, διακρίνοντας ανάποδη χρονική κατάταξη. 
+
+Η προφανής εξήγηση των ανομοιόμορφων αποτελεσμάτων μεταξύ τοπογραφικών και μη μετρήσεων οφείλεται στην τεχνολογία που χρησιμοποιήθηκε. Σύμφωνα με έρευνες που πραγματοποιήθηκαν στο παρελθόν \cite{electronics6040078}, καθώς και στην δημοσίευση του Saraswat και Mohammadi \cite{1051729}, διατυπώνεται πως στις προχωρημένες τεχνολογίες η καθυστέρηση λόγω των διασυνδέσεων έχει γίνει αρκετά σημαντικότερη από τις καθυστερήσεις των λογικών πυλών. Στην εικόνα \ref{graph:gap_between_interconection_and_gates_delay} δίνεται ένα γράφημα που δείχνει την διαφορά αυτή χρησιμοποιώντας τα στοιχεία από τις έρευνες που αναφέρθηκαν.
+
+\begin{figure}[H]
+\begin{center}
+\begin{tikzpicture}[scale=1]
+
+\begin{axis}[
+    width=9cm,
+    title={Γράφημα καθυστέρησης πυλών και διασυνδέσεων},
+    xlabel={Τεχνολογία (nm)},
+    ylabel={Χρονικά καθηστέρηση (ps)},
+    ymin=0, ymax=45,
+    xtick={650,500,350,250,180,100},
+    ytick={0,5,10,15,20,25,30,35,40,45},
+    legend pos=north east,
+    ymajorgrids=true,
+    grid style=dashed,
+]
+
+\addplot[
+    color=black,
+    mark=square,
+    ]
+    coordinates {
+    (650,17)(500,14)(350,9)(250,7)(180,5)(130,4)(100,3)
+    };
+    \legend{Gate}
+
+
+
+\addplot[
+    color=black,
+    mark=triangle,
+    ]
+    coordinates {
+    (650,2)(500,3)(350,5)(250,7)(180,13)(130,23)(100,39)
+    };
+    \legend{Interconection}
+
+   \legend{Gate,Interconection}
+% 
+\end{axis}
+
+
+\end{tikzpicture}
+\end{center}
+\caption{Γράφημα καθυστέρησης - μήκος εισόδου αθροιστών υπολοίπου}   
+\label{graph:gap_between_interconection_and_gates_delay}
+\end{figure}
+
+
+Στους αθροιστές Jackson σημειώνεται αρκετά μεγαλύτερο πλήθος κόμβων σε σχέση με τους υπόλοιπους δύο σχεδιασμούς. Συνεπάγεται, λοιπόν, πως και το πλήθος των διασυνδέσεων θα είναι μεγαλύτερο καθώς και λόγο δυσκολίας δρομολόγησης ίσως και πιο περίπλοκο.
 
 
 
 
 \subsection{Συμπεράσματα}
 
-Η χρονική απόδοση υπολογισμού του αθροίσματος υπολοίπου $2^n-1$ στους αθροιστές, που αναπτύχθηκαν στην παρούσα εργασία, είναι θετική στις περισσότερες περιπτώσει. Εφόσον στις μη-τοπογραφικές μετρήσεις το αποτελέσματα είναι πάντα θετικά, η τελικές προδιαγραφές των Jackson $2^n-1$ που αναπτύχθηκαν εξαρτώνται από την βιβλιοθήκη τεχνολογίας. Όσο μεγαλύτερο το τρανζίστορ της τεχνολογίας, τόσο πιο αμελητέα η αντίσταση των καλωδίων καθώς και άλλως φυσικών παραμέτρων που επηρεάζουν την ταχύτητα. Η χρήση τους είναι κατάλληλη όταν οι περιορισμοί διαθέσιμων πόρων και κατανάλωση ενέργειας είναι ελαστικοί. 
+Η χρονική απόδοση υπολογισμού του αθροίσματος υπολοίπου $2^n-1$ στους αθροιστές, που αναπτύχθηκαν στην παρούσα εργασία, είναι θετική στις περισσότερες περιπτώσει. Εφόσον στις μη-τοπογραφικές μετρήσεις το αποτελέσματα είναι πάντα θετικά, η τελικές προδιαγραφές των Jackson $2^n-1$ που αναπτύχθηκαν εξαρτώνται από την βιβλιοθήκη τεχνολογίας. Όσο μεγαλύτερο το τρανζίστορ της τεχνολογίας, τόσο πιο αμελητέα η αντίσταση των καλωδίων καθώς και άλλων φυσικών παραμέτρων που επηρεάζουν την ταχύτητα. Η χρήση τους είναι κατάλληλη όταν οι περιορισμοί διαθέσιμων πόρων και κατανάλωση ενέργειας είναι ελαστικοί. 
 
