Updates from ShareLaTeX

--- a/AddersFamily.tex
+++ b/AddersFamily.tex
@@ -1,10 +1,10 @@
 \section{Οικογένειες Αθροιστών}
-Στο προηγούμενο κεφάλαιο περιγράφηκε σχηματικά ένας απλός σχεδιασμός αθροιστή. Σε αυτή την ενότητα θα πραγματοποιηθεί η κατάταξη αυτού του αθροιστή σε μία κατηγορία, καθώς και η παρουσίαση μερικών ακόμα βασικών αρχιτεκτονικών.Επίσης θα αποδοθεί μια σύντομη περιγραφή, αναφέροντας πλεονεκτήματα και μειονεκτήματα για κάθε δομή. 
+Στο προηγούμενο κεφάλαιο περιγράφηκε ένας απλός σχεδιασμός αθροιστή. Σε αυτή την ενότητα θα πραγματοποιηθεί η κατάταξη αυτού του αθροιστή σε μία κατηγορία, καθώς και η παρουσίαση μερικών ακόμα βασικών αρχιτεκτονικών. Επίσης θα αποδοθεί μια σύντομη περιγραφή, αναφέροντας πλεονεκτήματα και μειονεκτήματα για κάθε δομή. 
 
 
 
 \subsection{Διάδοσης Κρατουμένου}
-Αθροιστής Διάδοσης Κρατουμένου ή Ripple-Carry Adder (RCA) είναι ο πιο απλός αθροιστής και το σχηματικό του παρουσιάστηκε στην εικόνα \ref{IntegerAdderSchematic}. Παρατηρείται πως για να υπολογιστεί το $sum_1$ δηλαδή το δεύτερο λιγότερο σημαντικό ψηφίο του αθροίσματος πρέπει πρώτα να υπολογιστεί το $c_{out}$ του προηγούμενου πλήρη αθροιστή $c_0$, αντίστοιχα για το τρίτο πρέπει να υπολογιστεί πρώτα το $c_0$ έπειτα από τον δεύτερο πλήρη αθροιστή να υπολογιστεί το $c_1$ με είσοδο στο $c_{in}$ το $c_0$ δηλαδή το $c_{out}$ του προηγούμενου FA. Επομένως κάθε FA δεν λειτουργεί παράλληλα με τα υπόλοιπα στοιχεία άθροισης, αλλά υπάρχει μια χρονική καθυστέρηση για να λάβει την σωστή είσοδο $c_{in}$. Αποτέλεσμα αυτού είναι πως στην χειρότερη περίπτωση, δηλαδή στην περίπτωση που το $c_{in}$ επηρεάζει άμεσα την τιμή του $c_{out}$ του αθροιστή, υπάρχει γραμμική αύξηση της καθυστέρησης με το μήκος του.
+Αθροιστής Διάδοσης Κρατουμένου ή Ripple-Carry Adder (RCA) είναι ο πιο απλός αθροιστής και το σχηματικό του παρουσιάστηκε στην εικόνα \ref{IntegerAdderSchematic}. Παρατηρείται πως για να υπολογιστεί το $sum_1$ δηλαδή το δεύτερο λιγότερο σημαντικό ψηφίο του αθροίσματος πρέπει πρώτα να υπολογιστεί το $c_{out}$ του προηγούμενου πλήρη αθροιστή, δηλαδή το $c_0$, αντίστοιχα για το τρίτο πρέπει να υπολογιστεί πρώτα το $c_0$ έπειτα από τον δεύτερο πλήρη αθροιστή να υπολογιστεί το $c_1$ με είσοδο στο $c_{in}$ το $c_0$ δηλαδή το $c_{out}$ του προηγούμενου FA. Επομένως κάθε FA δεν λειτουργεί παράλληλα με τα υπόλοιπα στοιχεία άθροισης, αλλά υπάρχει μια χρονική καθυστέρηση για να λάβει την σωστή είσοδο $c_{in}$. Αποτέλεσμα αυτού είναι πως στην χειρότερη περίπτωση, δηλαδή στην περίπτωση που το $c_{in}$ επηρεάζει άμεσα την τιμή του $c_{out}$ του αθροιστή, υπάρχει γραμμική αύξηση της καθυστέρησης με το μήκος του.
 Για παράδειγμα έχοντας έναν δυαδικό αθροιστή 8 ψηφίων και εισάγοντας τους αριθμούς Α = 00000000 και Β = 11111111 και $c_{in}$ = 0 θα πάρουμε έξοδο sum = 11111111 και $c_{out}$ = 0 . Αν κρατώντας όλες τις εισόδους σταθερές και αλλάζοντας μόνο την Α σε 00000001 δηλαδή το $A_0$=1 τότε το αποτέλεσμα θα είναι sum=00000000 και $c_{out}$ = 1. 
 \par
 Η περίπτωση που περιγράφηκε ανήκει στις χειρότερες περιπτώσεις διότι 
