--- a/Results.tex
+++ b/Results.tex
@@ -81,7 +81,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
 
 \clearpage
 \subsection{Μετρήσεις}
-Στην παράγραφο αυτή καταγράφονται τα αποτελέσματα των, τοπογραφικών και μη, μετρήσεων των αθροιστών σε μορφή πινάκων. Σημειώνεται πως για τις μετρήσεις δεν δόθηκε κανένας περιορισμός στο εργαλείο σύνθεσης. Οι μονάδες μέτρησης καθυστέρησης, εμβαδού και κατανάλωση ενέργειας είναι $ns$, $nm^2$ και $pw$ αντίστοιχα.
+Στην παράγραφο αυτή καταγράφονται τα αποτελέσματα των, τοπογραφικών και μη, μετρήσεων των αθροιστών σε μορφή πινάκων. Σημειώνεται πως για τις μετρήσεις δεν δόθηκε κανένας περιορισμός στο εργαλείο σύνθεσης (Παράρτημα \ref{appendix:scripts}). Οι μονάδες μέτρησης καθυστέρησης, εμβαδού και κατανάλωση ενέργειας είναι $ns$, $nm^2$ και $pw$ αντίστοιχα.
 \begin{multicols}{2}
 [\subsubsection{Μη-Τοπογραφικές Μετρήσεις}]
 %------------------------------------------------------------------------------
