--- a/modAdder.tex
+++ b/modAdder.tex
@@ -14,7 +14,7 @@
 
 
 
-\subsection{Basic Operation}
+\subsection{Μαθηματική προσέγγιση}
 Ο μαθηματικός υπολογισμός του αθροίσματος υπολοίπου $2^n-1$ στην πραγματικότητα είναι 
 ένας υπο-συνθήκη υπολογισμός με συνθήκη $A+B < 2^n$ και ορίζεται ως 
 \begin{equation}
