--- a/titlepage.tex
+++ b/titlepage.tex
@@ -11,7 +11,7 @@
 	%	Headings
 	%------------------------------------------------
 	
-	\textsc{\LARGE ΤΜΗΜΑ ΜΗΧΑΝΙΚΏΝ ΗΛΕΚΤΡΟΝΙΚΩΝ ΥΠΟΛΟΓΙΣΤΩΝ ΚΑΙ ΠΛΗΡΟΦΟΡΙΚΗΣ}\\[1.5cm]
+	\textsc{\LARGE ΤΜΗΜΑ ΜΗΧΑΝΙΚΏΝ ΗΛΕΚΤΡΟΝΙΚΩΝ \\[0.2cm] ΥΠΟΛΟΓΙΣΤΩΝ ΚΑΙ ΠΛΗΡΟΦΟΡΙΚΗΣ}\\[1.5cm]
 	\textsc{\Large ΠΑΝΕΠΙΣΤΗΜΙΟ ΠΑΤΡΑΣ}\\[0.8cm] 
 	\textsc{\large \today}\\[1cm]
 	
@@ -22,7 +22,7 @@
 	\HRule\\[0.4cm]
 	%{\huge\bfseries Recursive Ling $2^n-1$ Binary Adder}\\[0.4cm] % Title of your document
 	{\huge\bfseries Αναδρομική Ling Αρχιτεκτονική για αθροιστές υπολοίπου $2^n-1$}\\[0.4cm] 
-	\HRule\\[1.5cm]
+	\HRule\\[3cm]
 	
 	%------------------------------------------------
 	%	Author(s)
@@ -44,10 +44,11 @@
 % 		\end{flushright}
 % 	\end{minipage}
 
-	\vfill % Push the date up 1/4 of the remaining page
+% 	\vfill % Push the date up 1/4 of the remaining page
 
     \begin{center}
-        Βάσιλας Κωνσταντίνος\\[1.5cm]
+        \LargeΒάσιλας Κωνσταντίνος\\
+        vasilas@ceid.upatras.gr\\[3cm]
         
         Επιβλέπον καθηγητής\\
         Βέργος Χαρίδημος
