Updates from ShareLaTeX

--- a/Results.tex
+++ b/Results.tex
@@ -1111,7 +1111,7 @@ OR, NOR, XOR, XNOR, καθώς και άπλες λογικές συναρτήσ
     width=9cm,
     title={Γράφημα καθυστέρησης πυλών και διασυνδέσεων},
     xlabel={Τεχνολογία (nm)},
-    ylabel={Χρονικά καθηστέρηση (ps)},
+    ylabel={Χρονική καθηστέρηση (ps)},
     ymin=0, ymax=45,
     xtick={650,500,350,250,180,100},
     ytick={0,5,10,15,20,25,30,35,40,45},
