--- a/main.tex
+++ b/main.tex
@@ -127,7 +127,7 @@ sorting=ynt
 
 \usepackage{color, colortbl}
 %\definecolor{name}{system}{definition}
-\definecolor{Gray}{gray}{0.6}
+\definecolor{Gray}{gray}{0.8}
 \definecolor{LightGray}{gray}{0.8}
 \definecolor{White}{gray}{1}
 \newcolumntype{g}{>{\columncolor{Gray}}c}
@@ -214,10 +214,11 @@ sorting=ynt
 
 \thispagestyle{empty}
 \listoffigures
+\clearpage
 \thispagestyle{empty}
 \listoftables
-\thispagestyle{empty}
-\listofmyequations
+% \thispagestyle{empty}
+% \listofmyequations
 \thispagestyle{empty}
 \clearpage
 
